--- a/index.html
+++ b/index.html
@@ -2,17 +2,67 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="content-Type" content="text/html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> GITHUB </h1>
-    <p> hello world! </p>
+    <h1 class="heading"> Introduction to HTML</h1>
+    <p> HTML ( <span class="heading">H</span>yper<span class="heading">T</span>ext <span class="heading">M</span>arkup <span class="heading">L</span>anguage) is the code that is used
+         to structure a web page 
+        and its content. For example, content could be 
+        structured within a set of paragraphs, a list of bulleted points, 
+        or using images and data tables. 
+        
+         <br>
+        <br>
+          <span id="inv"> <strong> ps; it was invented by Physicit Tim Berners-Lee, the first version was published in 1993 </strong>
+          </span>
+</p>
+        
+
+    <h2 id="what"> so what is html? </h2>
+    <p> HTML is a<strong> markup language </strong> that defines the structure 
+        of your content. HTML consists of a series of elements,
+         which you use to enclose, or wrap, different parts of the content to make it appear a certain way,
+         or act a certain way. forexample, if we wanted a line to stand by itself, we could specify that 
+         it is a paragraph by enclosing it in a paragraph tag.</p>
 
 
+    <h2 id="ana"> Anatomy of an html element </h2>
+    <img src="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics/grumpy-cat-small.png" width="500">
+
+    <p>The main parts of our element are as follows:</p>
+    <ol>
+
+<li>The opening tag: This consists of the name of the element (in this case, p),
+    wrapped in opening and closing angle brackets. This states where the element 
+    begins or starts to take effect — in this case where the paragraph begins.</li> 
+ <li>The closing tag: This is the same as the opening tag, except that it includes 
+     a forward slash before the element name. This states where the element ends — 
+     in this case where the paragraph ends. Failing to add a closing tag is one of the standard beginner errors and can lead to strange results.</li>
+     <li>The content: This is the content of the element, which in this case, is just text.</li>
+        <li>The element: The opening tag, the closing tag, and the content together comprise the element.</li>
+</ol>
+<hr>
+
+<h2 id="sum"> summary </h2>
+HTML is a markup language used to 
+describe the structure and content of a webpage.... some of the elements covered in this lesson are..,
+<ul>
+    <li>Heading tag(s)</li>
+    <li> paragraph </li>
+    <li> List tags </li>
+    <li> Image </li>
+    <li> hyper references (link) </li>
+</ul>
+<p> we have barely scratched the surface of what's possible with HTML,
+     to learn more you can checkout the resources below</p>
 
 
-
+<p> Ps: this lesson is based on <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics"> html basics </a>from mozilla. if  
+    you wish to learn more, totally checkout that page.
+</p>
 </body>
 </html>
